Изменение реализации User c использованием dto и service